tests/machine/x/st/values_builtin.st
" Generated by Mochi compiler v0.10.25 on 2025-07-13T05:07:59Z
"
| m |
m := Dictionary from:{'a'->1. 'b'->2. 'c'->3}.
Transcript show: ((m values)) printString; cr.
